--- a/source/jade/story-item.jade
+++ b/source/jade/story-item.jade
@@ -125,85 +125,7 @@ block append content
 										a(href="#") 51
 									.views
 										a(href="#") 225
-				.box-comments
-					.bwrite
-						.bname
-							h3 Комментарии к статье
-							a(href="#enter-popup") Войти
-						.bcon
-							.ava
-								img(src="img/ava.png", alt="")
-							.text
-								textarea(placeholder="")
-							.action
-								a(href="#").btn-orange Оставить комментарий
-					.bcomments
-						.comment
-							.cprev
-								a(href="#") 
-									img(src="img/content/ava-2.jpg", alt="")
-							.ccon
-								.name
-									a(href="#") Konrad Karlovich
-									.date 1 час назад
-								.text Я эту штуку не куплю. Работаю с Microsoft Office -- он умнее, чем я.
-								.answer
-									a(href="#") Ответить
-							.comment
-								.cprev
-									a(href="#") 
-										img(src="img/content/ava-2.jpg", alt="")
-								.ccon
-									.name
-										a(href="#") Konrad Karlovich
-										.date 1 час назад
-									.text Кто вам сказал, что Surface 2 провал? Вполне нормально берут, конкурентов с таким функционалом просто нет в этом сегменте.
-									.answer
-										a(href="#") Ответить
-								.comment
-									.cprev
-										a(href="#") 
-											img(src="img/ava.png", alt="")
-									.ccon
-										.name
-											a(href="#") Konrad Karlovich
-											.date 1 час назад
-										.text Из всего перечня именитых контор Мелкомягкие дали фору абсолютно всем, посмотрели на представленный продукт.
-										.answer
-											a(href="#") Ответить
-									.comment
-										.cprev
-											a(href="#") 
-												img(src="img/content/ava-1.png", alt="")
-										.ccon
-											.name
-												a(href="#") Konrad Karlovich
-												.date 1 час назад
-											.text Кто вам сказал, что Surface 2 провал? Вполне нормально берут, конкурентов с таким функционалом просто нет в этом сегменте.
-											.answer
-												a(href="#") Ответить
-						.comment
-							.cprev
-								a(href="#") 
-									img(src="img/ava.png", alt="")
-							.ccon
-								.name
-									a(href="#") Konrad Karlovich
-									.date 1 час назад
-								.text Из всего перечня именитых контор Мелкомягкие дали фору абсолютно всем, посмотрели на представленный продукт.
-								.answer
-									a(href="#") Ответить
-						.comment
-							.cprev
-								a(href="#") 
-									img(src="img/content/ava-1.png", alt="")
-							.ccon
-								.name
-									a(href="#") Konrad Karlovich
-									.date 1 час назад
-								.text Кто вам сказал, что Surface 2 провал? Вполне нормально берут, конкурентов с таким функционалом просто нет в этом сегменте.
-								.answer
-									a(href="#") Ответить
+				+comment-block
 		//------------------------------------------------
 		.main-right
 			.box-news.box-right
