--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -218,7 +218,11 @@ color-orange()
 .inline
 	display inline-block
 	margin-right 20px
-	
+.row
+	margin-left 0
+	margin-right 0
+
+
 // ===============================================	
 
 .box-info .bcon.bcon--padding
