--- a/site/css/style.css
+++ b/site/css/style.css
@@ -5421,6 +5421,10 @@ i {
   display: inline-block;
   margin-right: 20px;
 }
+.row {
+  margin-left: 0;
+  margin-right: 0;
+}
 .box-info .bcon.bcon--padding {
   padding: 0 20px;
 }
