--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -155,7 +155,12 @@ i
 .btn-center-or
 	color-orange()
 	display inline-block
-	
+
+input.btn-orange-wide
+	@extend .btn-orange-wide
+	background none
+	&:hover
+		background none
 	
 
 //	TEXT
@@ -3945,7 +3950,12 @@ footer
 		clearfix()
 		margin-bottom -50px
 		overflow hidden
-		
+
+.order-ok
+	width 400px	
+	color #333
+	font-size 24px
+	text-align center
 
 //	#lineedit
 .lineedit
