--- a/source/jade/organizations-item.jade
+++ b/source/jade/organizations-item.jade
@@ -1,11 +1,48 @@
-//- Шаблон
-//------------------------------------------------
 extends _layout
 
- 
-//- Контент
-//------------------------------------------------
+block styles
+	link(href="css/jquery.remodal.css", rel="stylesheet")
+block scripts
+	script(src="js/jquery.remodal.js", type="text/javascript")
+		
 block append content
+	.hide
+		.remodal(data-remodal-id="poporder")
+			.popedit
+				.popedit__name Связаться
+				form(action="#")
+					.popedit__form
+						.lineedit
+							.lineedit__name
+								| Название
+								span.req *
+							.lineedit__con
+								input(type="text", placeholder="", value="Станок токарный с ЧПУ").inp-field.inp-field_500
+						.lineedit
+							.lineedit__name
+								| Описание
+							.lineedit__con
+								input(type="text", placeholder="", value="DELTAMAB 400").inp-field.inp-field_500
+						.lineedit
+							.lineedit__name
+								| ID заказа
+								span.req *
+							.lineedit__con
+								input(type="text", placeholder="", value="Отличные").inp-field.inp-field_full
+						.lineedit
+							.lineedit__name
+								| Контакты
+								span.req *
+							.lineedit__con
+								textarea(placeholder="").text-field.text-field_full (заказчика) , ФИО, телефон, емаил.
+						.lineedit
+							.lineedit__name
+								| Комментарий
+							.lineedit__con
+								textarea(placeholder="").text-field.text-field_full Комментарий
+						.lineedit
+							a(href="#").btn-orange-wide.inline.edit-save Связаться
+
 	.main-width.main-wrap
 		.pathway
 			ul
@@ -52,7 +89,7 @@ block append content
 							strong Контакты: 
 							| email@email.com, +7 495 675 87 98
 						.inline
-							a(href="#").btn-orange.btn-orange-bigm Свзяаться
+							a(href="#poporder").btn-orange.btn-orange-bigm Свзяаться
 				.bmetabot
 					.share
 						span Поделиться
@@ -77,7 +114,7 @@ block append content
 								.item-3col.js-object-box
 									.iprev
 										img(src="img/content/#{pic}", alt="")
-										a(href="#").feedback Связаться
+										a(href="#poporder").feedback Связаться
 									.icon
 										.iname
 											a(href="#")= name
@@ -400,63 +437,6 @@ block append content
 							
 							+item("ЗАО «Научно-производственный центр “Модуль”»", "120-85-2.jpg", "75")
 							+item("Санкт-Петербургский государственный университет аэрокосмического приборостроения", "120-85-1.jpg", "91")
-							//-
-								.item-3col
-									.iprev
-										img(src="img/content/120-85-2.jpg", alt="")
-									.icon
-										.iname
-											a(href="#") Московский государственный университет им. М.В.Ломоносова
-										.itext.lh-small
-											p Оборудование: 78% <br>
-												| Услуги: 67% <br>
-												| Программное обеспечние: 68% <br> 
-												| Результаты интеллектуальной деятельности: 64% <br>
-											a(href="#").btn-orange-empty Связаться
-									.iconright
-										.graph-name Рейтинг НТП 98 %
-										.graph-box
-											.graph-inner(style='width:98%;')
-										.irating.irating_margin
-											ul
-												li.star
-												li.star
-												li.star
-												li
-												li
-										.imeta
-											.comments
-												a(href="#") 51
-											.views
-												a(href="#") 225
-								.item-3col
-									.iprev
-										img(src="img/content/120-85-1.jpg", alt="")
-									.icon
-										.iname
-											a(href="#") Санкт-Петербургский государственный университет аэрокосмического приборостроения
-										.itext.lh-small
-											p Оборудование: 78% <br>
-												| Услуги: 67% <br>
-												| Программное обеспечние: 68% <br> 
-												| Результаты интеллектуальной деятельности: 64% <br>
-											a(href="#").btn-orange-empty Связаться
-									.iconright
-										.graph-name Рейтинг НТП 53 %
-										.graph-box
-											.graph-inner(style='width:53%;')
-										.irating.irating_margin
-											ul
-												li.star
-												li.star
-												li.star
-												li
-												li
-										.imeta
-											.comments
-												a(href="#") 51
-											.views
-												a(href="#") 225
 				+comment-block
 		//------------------------------------------------
 		.main-right
