--- a/source/jade/search.jade
+++ b/source/jade/search.jade
@@ -20,9 +20,10 @@ block append content
 			form(name="search-form", action="/search", method="post")
 				.form-filter-1
 					input(type="text", name="search-query", placeholder="Поиск")
-					input(id="radio-val-1" type="radio" name="radio" checked)
+					input(id="radio-val-1" type="radio" name="radio111" checked)
 					label(for="radio-val-1") Только в названиях
-					input(id="radio-val-2" type="radio" name="radio")
+					
+					input(id="radio-val-2" type="radio" name="radio111")
 					label(for="radio-val-2") Во всех текстах
 
 					.input-holder
