upd add remodal to all pages

--- a/source/jade/equipments.jade
+++ b/source/jade/equipments.jade
@@ -37,7 +37,8 @@ block append content
 							span 
 				.item
 					.iprev
-						img(src="img/content/equip-1.jpg", alt="")
+						a(href="img/content/640-360-1.jpg", data-lightbox="image-1", data-title="Станок токарный с ЧПУ")
+							img(src="img/content/equip-1.jpg", alt="")
 					.icon
 						.iname
 							a(href="#") Станок токарный с ЧПУ
