--- a/site/css/style.css
+++ b/site/css/style.css
@@ -4844,7 +4844,9 @@ table td {
   display: inline-block;
   max-width: 200px;
   overflow: hidden;
+  overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
   white-space: nowrap;
   vertical-align: middle;
 }
