add page feedback

--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -4030,6 +4030,7 @@ input.inp-radio + label
 	border 1px solid #e5e5e5
 	border-bottom none
 	.td
+			
 		display table-cell 
 		vertical-align top
 		border-bottom 1px solid #e5e5e5
@@ -4092,3 +4093,22 @@ input.inp-radio + label
 				pointer-events: none;
 				border-top-color: #ff8c4d;
 				border-width: 5px;
+				
+
+//	#feedback
+.feedback 
+	width 350px
+.formgroup
+	padding-bottom 15px
+.formgroup__name
+	padding-bottom 10px
+	color #333333
+	font-size 16px
+.formgroup__field 
+	input
+	textarea 
+		width 100%
+		full() 
+	
+
+		
