--- a/site/css/style.css
+++ b/site/css/style.css
@@ -10948,6 +10948,22 @@ input.inp-radio + label {
   border-top-color: #ff8c4d;
   border-width: 5px;
 }
+.feedback {
+  width: 350px;
+}
+.formgroup {
+  padding-bottom: 15px;
+}
+.formgroup__name {
+  padding-bottom: 10px;
+  color: #333;
+  font-size: 16px;
+}
+.formgroup__field input,
+.formgroup__field textarea {
+  width: 100%;
+  box-sizing: border-box;
+}
 @-webkit-keyframes opacity-fade {
   0% {
     opacity: 0.5;
