--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -2554,7 +2554,10 @@ textarea.inp-full
 				padding-bottom 10px;
 			.idate
 				font-size 11px; color #CCC;
-
+.box-interest_novisual
+	margin 0;
+	background none
+	border 1px solid #E5E5E5
 
 // Items with 3 collums
 .item-3col
@@ -4096,7 +4099,7 @@ input.inp-radio + label
 				
 
 //	#feedback
-.feedback 
+.feedback-box 
 	width 350px
 .formgroup
 	padding-bottom 15px
