--- a/source/jade/lk-new.jade
+++ b/source/jade/lk-new.jade
@@ -552,3 +552,336 @@ block append content
 							.ntp__info
 								.info-head Текущий НТП: 17%
 								.info-text Оборудование: 56 % <br>Услуги: 23 %<br>Программное обеспечение: 49 %<br>Результаты интеллектальной деятельности: 58 %
+			//------------------------------------------------
+			.box-interest.box-interest_novisual
+				.bname
+					h3 Рекомендуемые организации
+				.bcon
+					.box-articles.m-mod
+						mixin item(name, pic, rating)
+							.item-3col.js-object-box
+								.iprev
+									img(src="img/content/#{pic}", alt="")
+									a(href="#poporder").feedback Связаться
+								.icon
+									.iname
+										a(href="#")= name
+									div.iobjects
+										a(href="#").js-show-objects Предложения организации
+									.itext.lh-small
+										p Оборудование: 78% <br>
+											| Услуги: 67% <br>
+											| Программное обеспечние: 68% <br> 
+											| Объекты научного технического потенциала: - 28% <br> 
+											| Результаты интеллектуальной деятельности: 64% <br>
+								.iconright
+									.graph-name Рейтинг НТП #{rating} %
+									.graph-box
+										.graph-inner(style='width:#{rating}%;')
+									.irating.irating_margin
+										ul
+											li.star
+											li.star
+											li.star
+											li
+											li
+									.imeta
+										.comments
+											a(href="#") 51
+										.views
+											a(href="#") 225
+								.l-boxgrey.js-object-con
+									.boxgrey-name.js-show-objects
+										a(href="#").close
+										h3 Объекты научно-технического потенциала
+									.boxgrey-con.js-show-more-box
+										.row
+											.col-4-sep
+											.col-4.col-4_white.w33
+												.item-object
+													.iname 
+														a(href="#") Автолаборатория для проведения энергетического обследования на базе ГАЗ-27527
+													.irating.mar-bot-10
+														span Лаборатория
+														ul
+															li.star
+															li.star
+															li.star
+															li
+															li
+													.itext-ext
+														p.sm-mar
+															span.dark Выполняемые работы<br> 
+															span.grey Оптическая микроскопия.
+														p.sm-mar 
+															span.dark Основные характеристики<br> 
+															span.grey Исследования сплавов черных и цветных металлов.
+														p.sm-mar 
+															span.dark Производственная мощность<br> 
+															span.grey До 250 исследуемых образцов в месяц
+														p.sm-mar 
+															span.dark Аккредитация: 
+															span.grey Есть
+														p.sm-mar 
+															span.dark Организация (ВУЗ / ГНЦ): 
+															span.grey ЗАО «Научно-производственный центр “Модуль”»
+													.contacts-box
+														span.phone +7 495 675 87 98
+														span.email
+															a(href="#").link-orange email@email.com
+													.tags
+														a(href="#").tags-item
+															span.name Машиностроение
+															span.count 12
+														a(href="#").tags-item
+															span.name Металлообработка
+															span.count.empty
+											.col-4-sep &nbsp;
+											.col-4.col-4_white.w33
+												.item-object
+													.ipic: img(src="img/content/equip-2.jpg", alt="")
+													.iname 
+														a(href="#") Станок токарный с ЧПУ
+													.irating.irating_sm.mar-bot-10
+														span DELTAMAB 400
+														ul
+															li.star
+															li.star
+															li.star
+															li
+															li
+													.itext-ext
+														p.sm-mar Изготовление деталей типа тел вращения
+														p.sm-mar
+															span.dark  Организация (ВУЗ / ГНЦ): <br> 
+															span.grey ЗАО «Научно-производственный центр “Модуль”»
+													.tags
+														a(href="#").tags-item
+															span.name Машиностроение
+															span.count 12
+														a(href="#").tags-item
+															span.name Металлообработка
+															span.count.empty
+											.col-4-sep &nbsp;
+											.col-4.col-4_white.w33 
+												.item-object
+													.iname 
+														a(href="#") Металлографические исследования
+													.grey Микроскопия, анализ химического состава материалов
+													.irating.mar-bot-10
+														span Лаборатория
+														ul
+															li.star
+															li.star
+															li.star
+															li
+															li
+													.itext-ext
+														p.sm-mar
+															span.dark Описание: 
+															span.grey лаборатория
+														p.sm-mar
+															span.dark Организация (ВУЗ / ГНЦ): <br>
+															span.grey ЗАО «Научно-производственный центр “Модуль”»
+													.tags
+														a(href="#").tags-item
+															span.name Машиностроение
+															span.count 12
+														a(href="#").tags-item
+															span.name Металлообработка
+															span.count.empty
+										.row.hide
+											.col-4-sep
+											.col-4.col-4_white.w33
+												.item-object
+													.iname 
+														a(href="#") Автолаборатория для проведения энергетического обследования на базе ГАЗ-27527
+													.irating.mar-bot-10
+														span Лаборатория
+														ul
+															li.star
+															li.star
+															li.star
+															li
+															li
+													.itext-ext
+														p.sm-mar
+															span.dark Выполняемые работы<br> 
+															span.grey Оптическая микроскопия.
+														p.sm-mar 
+															span.dark Основные характеристики<br> 
+															span.grey Исследования сплавов черных и цветных металлов.
+														p.sm-mar 
+															span.dark Производственная мощность<br> 
+															span.grey До 250 исследуемых образцов в месяц
+														p.sm-mar 
+															span.dark Аккредитация: 
+															span.grey Есть
+														p.sm-mar 
+															span.dark Организация (ВУЗ / ГНЦ): 
+															span.grey ЗАО «Научно-производственный центр “Модуль”»
+													.contacts-box
+														span.phone +7 495 675 87 98
+														span.email
+															a(href="#").link-orange email@email.com
+													.tags
+														a(href="#").tags-item
+															span.name Машиностроение
+															span.count 12
+														a(href="#").tags-item
+															span.name Металлообработка
+															span.count.empty
+											.col-4-sep &nbsp;
+											.col-4.col-4_white.w33
+												.item-object
+													.ipic: img(src="img/content/equip-2.jpg", alt="")
+													.iname 
+														a(href="#") Станок токарный с ЧПУ
+													.irating.irating_sm.mar-bot-10
+														span DELTAMAB 400
+														ul
+															li.star
+															li.star
+															li.star
+															li
+															li
+													.itext-ext
+														p.sm-mar Изготовление деталей типа тел вращения
+														p.sm-mar
+															span.dark  Организация (ВУЗ / ГНЦ): <br> 
+															span.grey ЗАО «Научно-производственный центр “Модуль”»
+													.tags
+														a(href="#").tags-item
+															span.name Машиностроение
+															span.count 12
+														a(href="#").tags-item
+															span.name Металлообработка
+															span.count.empty
+											.col-4-sep &nbsp;
+											.col-4.col-4_white.w33 
+												.item-object
+													.iname 
+														a(href="#") Металлографические исследования
+													.grey Микроскопия, анализ химического состава материалов
+													.irating.mar-bot-10
+														span Лаборатория
+														ul
+															li.star
+															li.star
+															li.star
+															li
+															li
+													.itext-ext
+														p.sm-mar
+															span.dark Описание: 
+															span.grey лаборатория
+														p.sm-mar
+															span.dark Организация (ВУЗ / ГНЦ): <br>
+															span.grey ЗАО «Научно-производственный центр “Модуль”»
+													.tags
+														a(href="#").tags-item
+															span.name Машиностроение
+															span.count 12
+														a(href="#").tags-item
+															span.name Металлообработка
+															span.count.empty
+										.row.hide
+											.col-4-sep
+											.col-4.col-4_white.w33
+												.item-object
+													.iname 
+														a(href="#") Автолаборатория для проведения энергетического обследования на базе ГАЗ-27527
+													.irating.mar-bot-10
+														span Лаборатория
+														ul
+															li.star
+															li.star
+															li.star
+															li
+															li
+													.itext-ext
+														p.sm-mar
+															span.dark Выполняемые работы<br> 
+															span.grey Оптическая микроскопия.
+														p.sm-mar 
+															span.dark Основные характеристики<br> 
+															span.grey Исследования сплавов черных и цветных металлов.
+														p.sm-mar 
+															span.dark Производственная мощность<br> 
+															span.grey До 250 исследуемых образцов в месяц
+														p.sm-mar 
+															span.dark Аккредитация: 
+															span.grey Есть
+														p.sm-mar 
+															span.dark Организация (ВУЗ / ГНЦ): 
+															span.grey ЗАО «Научно-производственный центр “Модуль”»
+													.contacts-box
+														span.phone +7 495 675 87 98
+														span.email
+															a(href="#").link-orange email@email.com
+													.tags
+														a(href="#").tags-item
+															span.name Машиностроение
+															span.count 12
+														a(href="#").tags-item
+															span.name Металлообработка
+															span.count.empty
+											.col-4-sep &nbsp;
+											.col-4.col-4_white.w33
+												.item-object
+													.ipic: img(src="img/content/equip-2.jpg", alt="")
+													.iname 
+														a(href="#") Станок токарный с ЧПУ
+													.irating.irating_sm.mar-bot-10
+														span DELTAMAB 400
+														ul
+															li.star
+															li.star
+															li.star
+															li
+															li
+													.itext-ext
+														p.sm-mar Изготовление деталей типа тел вращения
+														p.sm-mar
+															span.dark  Организация (ВУЗ / ГНЦ): <br> 
+															span.grey ЗАО «Научно-производственный центр “Модуль”»
+													.tags
+														a(href="#").tags-item
+															span.name Машиностроение
+															span.count 12
+														a(href="#").tags-item
+															span.name Металлообработка
+															span.count.empty
+											.col-4-sep &nbsp;
+											.col-4.col-4_white.w33 
+												.item-object
+													.iname 
+														a(href="#") Металлографические исследования
+													.grey Микроскопия, анализ химического состава материалов
+													.irating.mar-bot-10
+														span Лаборатория
+														ul
+															li.star
+															li.star
+															li.star
+															li
+															li
+													.itext-ext
+														p.sm-mar
+															span.dark Описание: 
+															span.grey лаборатория
+														p.sm-mar
+															span.dark Организация (ВУЗ / ГНЦ): <br>
+															span.grey ЗАО «Научно-производственный центр “Модуль”»
+													.tags
+														a(href="#").tags-item
+															span.name Машиностроение
+															span.count 12
+														a(href="#").tags-item
+															span.name Металлообработка
+															span.count.empty
+										.show-more.js-show-more
+											a(href="#") Показать еще
+						
+						+item("ЗАО «Научно-производственный центр “Модуль”»", "120-85-2.jpg", "75")
+						+item("Санкт-Петербургский государственный университет аэрокосмического приборостроения", "120-85-1.jpg", "91")
