--- a/source/jade/events.jade
+++ b/source/jade/events.jade
@@ -9,6 +9,8 @@ block title
 //- Контент
 //------------------------------------------------
 block append content
+	+event-map
+
 	.main-width.main-wrap
 		.pathway
 			ul
@@ -35,7 +37,8 @@ block append content
 								span.name Выставки
 								span.count 12
 						.address-date
-							.ad-address Москва, ул. Сиреневый бульвар, д.4
+							.ad-address
+								a(href="#").js-open-map Москва, ул. Сиреневый бульвар, д.4
 							.ad-date 27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00
 						.imeta
 							.right.mar-top-20m
@@ -57,7 +60,8 @@ block append content
 								span.name Круглый стол
 								span.count.empty
 						.address-date
-							.ad-address Москва, ул. Сиреневый бульвар, д.4
+							.ad-address
+								a(href="#").js-open-map Москва, ул. Сиреневый бульвар, д.4
 							.ad-date 27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00
 						.imeta
 							.right.mar-top-20m
@@ -82,7 +86,8 @@ block append content
 								span.name Круглый стол
 								span.count.empty
 						.address-date
-							.ad-address Москва, ул. Сиреневый бульвар, д.4
+							.ad-address
+								a(href="#").js-open-map Москва, ул. Сиреневый бульвар, д.4
 							.ad-date 27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00
 						.imeta
 							.right.mar-top-20m
@@ -104,7 +109,8 @@ block append content
 								span.name Круглый стол
 								span.count.empty
 						.address-date
-							.ad-address Москва, ул. Сиреневый бульвар, д.4
+							.ad-address
+								a(href="#").js-open-map Москва, ул. Сиреневый бульвар, д.4
 							.ad-date 27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00
 						.imeta
 							.right.mar-top-20m
@@ -126,7 +132,8 @@ block append content
 								span.name Мастер-класс
 								span.count 43
 						.address-date
-							.ad-address Москва, ул. Сиреневый бульвар, д.4
+							.ad-address
+								a(href="#").js-open-map Москва, ул. Сиреневый бульвар, д.4
 							.ad-date 27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00
 						.imeta
 							.right.mar-top-20m
@@ -148,7 +155,8 @@ block append content
 								span.name Круглый стол
 								span.count.empty
 						.address-date
-							.ad-address Москва, ул. Сиреневый бульвар, д.4
+							.ad-address
+								a(href="#").js-open-map Москва, ул. Сиреневый бульвар, д.4
 							.ad-date 27, 28 октября - с 14.00 до 16.00, <br>29, 30 октября - с 10.00 до 12.00
 						.imeta
 							.right.mar-top-20m
@@ -212,7 +220,8 @@ block append content
 								span.name Круглый стол
 								span.count.empty
 						.address-date
-							.ad-address Москва, ул. Сиреневый бульвар, д.4
+							.ad-address
+								a(href="#").js-open-map Москва, ул. Сиреневый бульвар, д.4
 							.ad-date 27, 28 октября - с 14.00<br>29, 30 октября - с 10.00
 					.item
 						.idate 18 Сентября
@@ -224,7 +233,8 @@ block append content
 								span.name Выставки
 								span.count 45
 						.address-date
-							.ad-address Москва, ул. Сиреневый бульвар, д.4
+							.ad-address
+								a(href="#").js-open-map Москва, ул. Сиреневый бульвар, д.4
 							.ad-date 27, 28 октября - с 14.00<br>29, 30 октября - с 10.00
 					.item
 						.idate 30 Сентября
@@ -236,7 +246,8 @@ block append content
 								span.name Круглый стол
 								span.count.empty
 						.address-date
-							.ad-address Москва, ул. Сиреневый бульвар, д.4
+							.ad-address
+								a(href="#").js-open-map Москва, ул. Сиреневый бульвар, д.4
 							.ad-date 27, 28 октября - с 14.00<br>29, 30 октября - с 10.00
 				.ball
 					a(href="#") Все новости
