--- a/source/styl/style.styl
+++ b/source/styl/style.styl
@@ -4112,6 +4112,14 @@ input.inp-radio + label
 	textarea 
 		width 100%
 		full() 
-	
 
-		
+//	#map
+#google-map
+	width 600px
+	height 500px
+	position relative
+.remodal_map
+	position relative
+	width 600px
+	height 500px
+	padding 0 !important
